Fixing bug 20058 - OSD flickers during video playback. r=stevel (xul bits), MikeS(everything else).
Confirmed no flickering on MikeS's machine that did flicker before.

git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@17494 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/dialogs/videoWinControls.css
+++ b/app/skin/dialogs/videoWinControls.css
@@ -28,9 +28,9 @@
 */
 
 #video_osd_controls_win {
-  background-color: transparent !important;
+  background-color: black !important;
   width: 320px;
-  height: 240px;
+  height: 70px;
 }
 
 /*
@@ -39,9 +39,6 @@
 */
 
 #osd_wrapper_hbox {
-  padding-bottom: 14px;
-  padding-left: 10px;
-  padding-right: 10px;
 }
 
 #osd_wrapper_hbox[fullscreen] {
